src/objects/Project_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Expiration_Warning__c</fullName>
        <formula>Agreement__r.Valid_Through__c &lt; Project__r.End_Date__c</formula>
        <label>Agreement Expiration Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Project_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Days_Until_Agreement_Expiration__c</fullName>
        <formula>IF(
  Agreement_Expiration_Warning__c = TRUE,
  Agreement__r.Valid_Through__c - TODAY(),
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Agreement Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Project_Agreements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>PA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ensure_Accounts_Match</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  Agreement__r.RecordType.DeveloperName != &apos;Delivery_Partnership&apos;,
  Agreement__r.Account__c != Project__r.Account__c
)</errorConditionFormula>
        <errorMessage>The Agreement and the Project must both be tied to the same Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Expired_Agreements_on_Open_Projects</fullName>
        <active>true</active>
        <description>Prevents an Expired Agreement from being added to a Project that is either Projected or Open</description>
        <errorConditionFormula>AND(
  ISNEW(),
  ISPICKVAL(Agreement__r.Status__c, &apos;Expired&apos;),
  OR(
    ISPICKVAL(Project__r.Status__c, &apos;Projected&apos;),
    ISPICKVAL(Project__r.Status__c, &apos;Open&apos;)
  )
)</errorConditionFormula>
        <errorMessage>You cannot assign an Expired Agreement to a Project that is Open or Projected. Please choose another Agreement.</errorMessage>
    </validationRules>
</CustomObject>